# emutos

./: .gitignore  CMakeLists.txt  Makefile  Makefile_sbc.mk  README.md  emutos.ld  localconf.h  version.c.in
bios/: bios.c  bios.h  coldfire.c  country.c  disk.c  disk.h  duart68681.h  font.c  ide.c  ikbd.c  ikbd.h  kprint.c  machine.c  mfp.c  mouse.c  rosco2.c  rosco2.h  screen.c  serport.c  serport.h  spi_duart.S  startup.S  vectors.S  vectors.h  vt52.c
cli/: cmdmain.c
cmake/: preproc.cmake  toolchain.cmake
desk/: deskmain.c
include/: config.h  config_bitsy_v1.h  config_roberts7531.h  config_rosco_v2.h  config_tiny68k.h  cookie.h  has.h
tools/: bug.c
